--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
-dist
+
+# Build output (keep dist for deployment)
+# dist
 dist-ssr
 *.local
 
